Modified for use by me

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-<a id="go-back-home" href="/"><img src="/images/scribble.png" alt="scribble" width="53" height="59"></a>
+<a id="go-back-home" href="/"><img src="https://s.gravatar.com/avatar/7e4cfbab0f4b83ac3204a8e9e982b598?s=80&r=g" alt="home" width="59" height="59"></a>
 <p>{{ site.title }}</p>
 </header>
